[package]
name = "actix-framed"
version = "0.3.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix framed app server"
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
documentation = "https://docs.rs/actix-framed/"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::websocket"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actix_framed"
path = "src/lib.rs"

[dependencies]
actix-codec = { git = "https://github.com/clia/actix-net.git" }
actix-service = { git = "https://github.com/clia/actix-net.git" }
actix-router = { git = "https://github.com/clia/actix-net.git" }
actix-rt = { git = "https://github.com/clia/actix-net.git" }
actix-http = { git = "https://github.com/clia/actix-web.git" }

bytes = "0.5.3"
futures = "0.3.1"
pin-project = "0.4.6"
log = "0.4"

[dev-dependencies]
actix-server = { git = "https://github.com/clia/actix-net.git" }
actix-connect = { git = "https://github.com/clia/actix-net.git", features=["openssl"] }
actix-http-test = { git = "https://github.com/clia/actix-web.git", features=["openssl"] }
actix-utils = { git = "https://github.com/clia/actix-net.git" }
