[package]
name = "actix-multipart"
version = "0.2.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Multipart support for actix web framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
documentation = "https://docs.rs/actix-multipart/"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actix_multipart"
path = "src/lib.rs"

[dependencies]
actix-web = { git = "https://github.com/clia/actix-web.git", default-features = false }
actix-service = { git = "https://github.com/clia/actix-net.git" }
actix-utils = { git = "https://github.com/clia/actix-net.git" }
bytes = "0.5.3"
derive_more = "0.99.2"
httparse = "1.3"
futures = "0.3.1"
log = "0.4"
mime = "0.3"
twoway = "0.2"

[dev-dependencies]
actix-rt = { git = "https://github.com/clia/actix-net.git" }
actix-http = { git = "https://github.com/clia/actix-web.git" }
