[package]
name = "actix-web-codegen"
version = "0.2.1"
description = "Actix web proc macros"
readme = "README.md"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
workspace = ".."

[lib]
proc-macro = true

[dependencies]
quote = "^1"
syn = { version = "^1", features = ["full", "parsing"] }
proc-macro2 = "^1"

[dev-dependencies]
actix-rt = { git = "https://github.com/clia/actix-net.git" }
actix-web = { git = "https://github.com/clia/actix-web.git" }
futures = "0.3.1"
