[package]
name = "awc"
version = "2.0.0-alpha.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix http client."
readme = "README.md"
keywords = ["actix", "http", "framework", "async", "web"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
documentation = "https://docs.rs/awc/"
categories = ["network-programming", "asynchronous",
              "web-programming::http-client",
              "web-programming::websocket"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "awc"
path = "src/lib.rs"

[package.metadata.docs.rs]
features = ["openssl", "rustls", "compress"]

[features]
default = ["compress"]

# openssl
openssl = ["open-ssl", "actix-http/openssl"]

# rustls
rustls = ["rust-tls", "actix-http/rustls"]

# content-encoding support
compress = ["actix-http/compress"]

[dependencies]
actix-codec = { git = "https://github.com/clia/actix-net.git" }
actix-service = { git = "https://github.com/clia/actix-net.git" }
actix-http = { git = "https://github.com/clia/actix-web.git" }
actix-rt = { git = "https://github.com/clia/actix-net.git" }

base64 = "0.11"
bytes = "0.5.3"
derive_more = "0.99.2"
futures-core = "0.3.1"
log =" 0.4"
mime = "0.3"
percent-encoding = "2.1"
rand = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6.1"
open-ssl = { version="0.10", package="openssl", optional = true }
rust-tls = { version = "0.17.0", package="rustls", optional = true, features = ["dangerous_configuration"]  }

[dev-dependencies]
actix-connect = { git = "https://github.com/clia/actix-net.git", features=["openssl"] }
actix-web = { git = "https://github.com/clia/actix-web.git", features=["openssl"] }
actix-http = { git = "https://github.com/clia/actix-web.git", features=["openssl"] }
actix-http-test = { git = "https://github.com/clia/actix-web.git", features=["openssl"] }
actix-utils = { git = "https://github.com/clia/actix-net.git" }
actix-server = { git = "https://github.com/clia/actix-net.git" }
actix-tls = { git = "https://github.com/clia/actix-net.git", features=["openssl", "rustls"] }
brotli2 = "0.3.2"
flate2 = "1.0.13"
futures = "0.3.1"
env_logger = "0.7"
webpki = "0.21"
